[project]
name = "ai-shed"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "diffusers>=0.33.1",
    "fastapi>=0.115.12",
    "gradio>=5.29.0",
    "huggingface-hub[hf-xet]>=0.31.2",
    "nicegui>=2.17.0",
    "protobuf>=6.31.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pyright]
include = ["src"]

[tool.ruff]
line-length = 120
